# src/v1/item-bids/dto/create-item-bid.dto.ts
@@ -1,0 +1,11 @@
+import { IsNotEmpty, IsNumber, IsPositive } from 'class-validator';
+
+export class CreateItemBidDto {
+  @IsNotEmpty()
+  itemId: string;
+
+  @IsNotEmpty()
+  @IsNumber()
+  @IsPositive()
+  price: number;
+}
