# src/v1/users/entities/user.entity.ts
@@ -3,6 +3,7 @@ import { Column, Entity, OneToMany } from 'typeorm';
 
 import { Base } from '../../../common/entities/base.entity';
 import { InternalTransaction } from '../../internal-transactions/entities/internal-transaction.entity';
+import { ItemBid } from '../../item-bids/entities/item-bid.entity';
 import { Item } from '../../items/entities/item.entity';
 
 @Entity({ name: 'users' })
@@ -23,5 +24,8 @@ export class User extends Base {
   internalTransactions: InternalTransaction[];
 
   @OneToMany(() => Item, (item) => item.user)
-  items: InternalTransaction[];
+  items: Item[];
+
+  @OneToMany(() => ItemBid, (itemBid) => itemBid.user)
+  itemBids: ItemBid[];
 }
